--- a/app/src/main/res/layout/activity_routine.xml
+++ b/app/src/main/res/layout/activity_routine.xml
@@ -94,7 +94,7 @@
                 android:text="@string/loremipsum"
                 android:textAppearance="?attr/textAppearanceBody1"></TextView>
 
-
+            <include layout="@layout/classic_divider"/>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/cyclesRecView"
                 android:layout_width="match_parent"
@@ -117,7 +117,7 @@
                     android:layout_marginRight="30dp"
                     app:srcCompat="@drawable/ic_calendar_today_white_24dp"
                     android:backgroundTint="@color/purple_500"
-                    
+
                     />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
