--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -34,14 +34,6 @@
 
     </LinearLayout>
 
-    <View
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@color/colorAccent"
-        android:layout_height="2dp" android:layout_width="match_parent"
-        >
 
-    </View>
+    <include layout="@layout/classic_divider"/>
 </LinearLayout>
