--- a/app/src/main/res/layout/home_sections_divider.xml
+++ b/app/src/main/res/layout/home_sections_divider.xml
@@ -4,22 +4,16 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     >
-    <View
-        android:layout_marginTop="20dp"
-        android:background="@color/purple_200"
-        android:layout_height="1dp"
-        android:layout_width="wrap_content"
-        />
-    <View
 
-        android:background="@color/colorAccent"
+    <View
+        android:elevation="15dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:background="#1DDAD0"
         android:layout_height="8dp"
         android:layout_width="wrap_content"
-        />
-    <View
 
-        android:background="@color/purple_200"
-        android:layout_height="1dp"
-        android:layout_width="wrap_content"
         />
+
 </LinearLayout>
