--- a/app/src/main/res/layout/routine_list_item.xml
+++ b/app/src/main/res/layout/routine_list_item.xml
@@ -52,22 +52,27 @@
                     app:layout_constraintVertical_bias="0.0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="2dp"
+                    android:paddingTop="2dp"
+                    android:paddingBottom="2dp"
                     android:fontFamily="@font/google_sans_bold"
                     android:text="Routine"
                     android:textAppearance="?attr/textAppearanceHeadline6" />
 
-                <TextView
+                <RatingBar
                     android:id="@+id/routineScore"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:padding="2dp"
-                    android:text="Score"
-                    android:textAppearance="?attr/textAppearanceBody2"
-                    android:textColor="?android:attr/textColorSecondary"
+
+                    android:numStars="5"
+                    style="?android:attr/ratingBarStyleSmall"
+                    android:isIndicator="true"
                     app:layout_constraintStart_toStartOf="@+id/routineName"
-                    app:layout_constraintTop_toBottomOf="@id/routineName" />
+                    app:layout_constraintTop_toBottomOf="@id/routineName"
+                    >
+
+
+                </RatingBar>
 
                 <TextView
                     android:id="@+id/routineDuration"
