--- a/app/src/main/res/layout/activity_routine.xml
+++ b/app/src/main/res/layout/activity_routine.xml
@@ -67,32 +67,42 @@
                 android:textAppearance="?attr/textAppearanceHeadline4"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/rDifficulty"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="4dp"
-                android:text="Dificil"
-                android:textAppearance="?attr/textAppearanceHeadline6"
-                android:textStyle="italic" />
-
             <RatingBar
                 android:id="@+id/rScore"
-                style="?android:attr/ratingBarStyleIndicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:numStars="5"
-                android:padding="4dp"
-                android:rating="4" />
+                android:layout_marginLeft="5dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                style="?android:attr/ratingBarStyleIndicator"
+                android:isIndicator="true"
+                 />
+
+
 
             <TextView
                 android:id="@+id/rDetail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
+                android:layout_marginLeft="5dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
                 android:text="@string/loremipsum"
                 android:textAppearance="?attr/textAppearanceBody1"></TextView>
+
+            <TextView
+                android:visibility="gone"
+                android:id="@+id/rDifficulty"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:text="Dificil"
+                android:layout_marginLeft="5dp"
+                android:textAppearance="?attr/textAppearanceHeadline6"
+                android:textStyle="italic" />
+
 
             <include layout="@layout/classic_divider"/>
             <androidx.recyclerview.widget.RecyclerView
