--- a/app/src/main/res/layout/activity_routine.xml
+++ b/app/src/main/res/layout/activity_routine.xml
@@ -32,6 +32,7 @@
 
 
             <androidx.appcompat.widget.Toolbar
+                app:navigationIcon="?attr/homeAsUpIndicator"
                 android:id="@+id/toolbar_main"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
