--- a/app/src/main/res/layout/activity_routine.xml
+++ b/app/src/main/res/layout/activity_routine.xml
@@ -84,7 +84,9 @@
                     android:numStars="5"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp" />
-
+                <Space
+                    android:layout_width="20dp"
+                    android:layout_height="40dp"/>
                 <Button
                     android:id="@+id/reviewBtn"
                     android:layout_width="wrap_content"
