user backend - user name and user image

--- a/app/src/main/res/layout/avatar.xml
+++ b/app/src/main/res/layout/avatar.xml
@@ -21,6 +21,7 @@
             android:layout_gravity="center">
 
             <ImageView
+                android:id="@+id/userImageView"
                 android:layout_width="75dp"
                 android:layout_height="75dp"
                 android:src="@drawable/avatar"
