--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -16,11 +16,14 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingBottom="10dp">
 
-        <include layout="@layout/avatar">
+        <include
+            android:id="@+id/includeHeader"
+            layout="@layout/avatar">
 
         </include>
 
         <TextView
+            android:id="@+id/usernameHeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
