--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -65,4 +65,7 @@
         <item name="colorControlNormal">@color/black</item>
         <item name="colorControlActivated">#787C77</item>
     </style>
+    <style name="profileCard">
+        <item name="android:textSize">16sp</item>
+    </style>
 </resources>
