--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,167 +1,227 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/usr_image"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    tools:context=".ui.profile.ProfileFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/usr_image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.perfil.PerfilFragment">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:orientation="vertical">
 
-
-        <TextView
-            android:id="@+id/profile_username"
-            android:layout_width="171dp"
-            android:layout_height="28dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="120dp"
-            android:text="@string/user_hint"
-            android:textAlignment="center"
-            android:textColor="?android:attr/textColorPrimary"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/change_photo" />
-
-        <TextView
-            android:id="@+id/profile_email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="189dp"
-            android:text="@string/email_hint"
-            android:textColor="?android:attr/textColorSecondary"
-            android:textColorHint="#636060"
-            android:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_username" />
-
-        <View
-            android:id="@+id/divider"
-            android:layout_width="729dp"
-            android:layout_height="1dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="18dp"
-            android:background="?android:attr/listDivider"
-            android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@+id/firstName"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_email" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/avatar"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:layout_marginBottom="-20dp"
+            android:src="@drawable/avatar"
+            app:civ_border_color="@color/colorAccent"
+            app:civ_border_width="2dp" />
 
         <ImageView
-            android:id="@+id/avatar"
-            android:layout_width="100dp"
-            android:layout_height="110dp"
-            android:layout_marginTop="28dp"
-            android:layout_marginEnd="156dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/avatar"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
             android:id="@+id/change_photo"
-            android:layout_width="171dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="19dp"
-            android:layout_marginEnd="120dp"
-            android:backgroundTint="@color/white"
-            android:text="@string/profile_photo"
-            android:textColor="@color/colorAccent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/avatar" />
+            android:layout_gravity="end"
+            android:src="@drawable/ic_add_photo" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/profile_username"
+        android:layout_width="171dp"
+        android:layout_height="28dp"
+        android:text="@string/user_hint"
+        android:textAlignment="center"
+        android:textColor="?android:attr/textColorPrimary"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/profile_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="@string/email_hint"
+        android:textColor="?android:attr/textColorSecondary"
+        android:textColorHint="#636060"
+        android:visibility="visible" />
+
+    <View xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/purple_500">
+
+    </View>
+
+    <LinearLayout
+        android:id="@+id/edit_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <EditText
             android:id="@+id/firstName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="35dp"
-            android:layout_marginEnd="95dp"
             android:ems="10"
             android:hint="@string/profile_first_name"
             android:inputType="textPersonName"
             android:maxLength="20"
-            android:minHeight="48dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_email" />
+            android:minHeight="48dp" />
 
         <EditText
             android:id="@+id/lastName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="14dp"
-            android:layout_marginEnd="95dp"
             android:ems="10"
             android:hint="@string/profile_last_name"
             android:inputType="textPersonName"
             android:maxLength="20"
-            android:minHeight="48dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/firstName" />
+            android:minHeight="48dp" />
 
-        <EditText
-            android:id="@+id/editTextPhone"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="14dp"
-            android:layout_marginEnd="95dp"
-            android:ems="10"
-            android:hint="@string/profile_phone"
-            android:inputType="phone"
-            android:minHeight="48dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lastName" />
+            android:orientation="vertical">
 
-        <Spinner
-            android:id="@+id/gender"
-            android:layout_width="218dp"
-            android:layout_height="46dp"
-            android:layout_marginTop="8dp"
-            android:ems="10"
-            android:minHeight="48dp"
-            android:tooltipText="@string/gender"
-            app:layout_constraintStart_toStartOf="@+id/genderText"
-            app:layout_constraintTop_toBottomOf="@+id/genderText" />
+            <TextView
+                android:id="@+id/genderText"
+                android:layout_width="76dp"
+                android:layout_height="27dp"
+                android:minHeight="48dp"
+                android:text="@string/gender"
+                android:textSize="16dp" />
+
+            <Spinner
+                android:id="@+id/gender"
+                android:layout_width="218dp"
+                android:layout_height="46dp"
+                android:ems="10"
+                android:minHeight="48dp"
+                android:tooltipText="@string/gender" />
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/saveBtn"
             android:layout_width="125dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="140dp"
             android:backgroundTint="@color/colorAccent"
             android:text="@string/profile_save"
-            android:textColor="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/gender" />
+            android:textColor="@color/white" />
+    </LinearLayout>
 
-        <TextView
-            android:id="@+id/genderText"
-            android:layout_width="76dp"
-            android:layout_height="27dp"
-            android:layout_marginTop="13dp"
-            android:minHeight="48dp"
-            android:text="@string/gender"
-            android:textSize="16dp"
-            app:layout_constraintStart_toStartOf="@+id/editTextPhone"
-            app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
+    <LinearLayout
+        android:id="@+id/info_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="visible"
+        android:gravity="center">
 
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="@color/purple_200"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="10dp"
+            app:contentPadding="10dp">
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline2"
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="center">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="10dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="10dp"
+                        android:fontFamily="@font/google_sans_bold"
+                        android:text="@string/profile_first_name"
+                        style="@style/profileCard"/>
+
+                    <TextView
+                        android:id="@+id/set_fname"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="a setear"
+                        style="@style/profileCard"/>
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="10dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="10dp"
+                        android:fontFamily="@font/google_sans_bold"
+                        android:text="@string/profile_last_name"
+                        style="@style/profileCard"/>
+
+                    <TextView
+                        android:id="@+id/set_lname"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="a setear"
+                        style="@style/profileCard"/>
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="10dp"
+                        android:fontFamily="@font/google_sans_bold"
+                        android:text="@string/gender"
+                        style="@style/profileCard"/>
+
+                    <TextView
+                        android:id="@+id/set_gender"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="a setear"
+                        style="@style/profileCard"/>
+
+                </LinearLayout>
+            </LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/editButton"
+            app:icon="@drawable/ic_pencil"
+            app:iconGravity="end"
+            android:text="@string/edit_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="20dp" />
+            android:backgroundTint="@color/colorAccent"/>
+    </LinearLayout>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
 
-</FrameLayout>
