--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -18,18 +18,18 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/avatar"
-            android:layout_width="96dp"
-            android:layout_height="96dp"
-            android:layout_marginBottom="-20dp"
+            android:layout_width="220dp"
+            android:layout_height="220dp"
             android:src="@drawable/avatar"
             app:civ_border_color="@color/colorAccent"
             app:civ_border_width="2dp" />
 
         <ImageView
             android:id="@+id/change_photo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="47dp"
             android:layout_gravity="end"
+            android:layout_marginTop="-30dp"
             android:src="@drawable/ic_add_photo" />
     </LinearLayout>
 
@@ -40,7 +40,7 @@
         android:text="@string/user_hint"
         android:textAlignment="center"
         android:textColor="?android:attr/textColorPrimary"
-        android:textSize="20sp"
+        android:textSize="23sp"
         android:textStyle="bold"
         android:visibility="visible" />
 
@@ -52,7 +52,8 @@
         android:text="@string/email_hint"
         android:textColor="?android:attr/textColorSecondary"
         android:textColorHint="#636060"
-        android:visibility="visible" />
+        android:visibility="visible"
+        android:textSize="17sp"/>
 
     <View xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -70,7 +71,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="gone"
+        android:layout_marginTop="10dp"
+        android:gravity="center">
 
         <EditText
             android:id="@+id/firstName"
@@ -80,7 +83,8 @@
             android:hint="@string/profile_first_name"
             android:inputType="textPersonName"
             android:maxLength="20"
-            android:minHeight="48dp" />
+            android:minHeight="48dp"
+            android:layout_marginBottom="10dp"/>
 
         <EditText
             android:id="@+id/lastName"
@@ -90,7 +94,8 @@
             android:hint="@string/profile_last_name"
             android:inputType="textPersonName"
             android:maxLength="20"
-            android:minHeight="48dp" />
+            android:minHeight="48dp"
+            android:layout_marginBottom="10dp"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -103,7 +108,8 @@
                 android:layout_height="27dp"
                 android:minHeight="48dp"
                 android:text="@string/gender"
-                android:textSize="16dp" />
+                android:textSize="16dp"
+                android:layout_marginBottom="5dp"/>
 
             <Spinner
                 android:id="@+id/gender"
@@ -115,13 +121,26 @@
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/saveBtn"
-            android:layout_width="125dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/colorAccent"
-            android:text="@string/profile_save"
-            android:textColor="@color/white" />
+            android:orientation="horizontal">
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/cancelBtn"
+                android:text="@string/cancel_edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="@color/colorAccent"/>
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/saveBtn"
+                android:text="@string/profile_save"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"/>
+        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
@@ -130,7 +149,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:visibility="visible"
-        android:gravity="center">
+        android:gravity="center"
+        android:layout_marginTop="20dp">
 
         <com.google.android.material.card.MaterialCardView
             android:layout_width="250dp"
@@ -219,6 +239,7 @@
             android:text="@string/edit_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:backgroundTint="@color/colorAccent"/>
     </LinearLayout>
 
