--- a/app/src/main/res/layout/activity_routine.xml
+++ b/app/src/main/res/layout/activity_routine.xml
@@ -176,6 +176,7 @@
                     />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/playBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
